update all files

--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ body {
 
 .site-wide-alert {
   color: firebrick;
-  background-color: #eec802;
+  background-color: lightgreen;
 
   padding: 5px 15px;
   margin-bottom: 0;
